crates/hird-parse/tests/snapshots/smoke__crash_expr.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(r#\"fn go() = crash!(\"boom\")\"#)"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "go"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    CRASH_EXPR
      WHITESPACE " "
      CRASH_KW "crash"
      BANG "!"
      L_PAREN "("
      STRING "\"boom\""
      R_PAREN ")"
