crates/hird-parse/tests/snapshots/smoke__effect_simple.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 162
expression: "render_cst(\"effect Log\")"
---
SOURCE_FILE
  EFFECT_DECL
    EFFECT_KW "effect"
    WHITESPACE " "
    IDENT "Log"
