crates/hird-parse/tests/snapshots/smoke__effect_with_params.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 167
expression: "render_cst(\"effect State<S>\")"
---
SOURCE_FILE
  EFFECT_DECL
    EFFECT_KW "effect"
    WHITESPACE " "
    IDENT "State"
    TYPE_PARAMS
      LT "<"
      IDENT "S"
      GT ">"
