crates/hird-parse/tests/snapshots/smoke__empty_source.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 59
expression: "render_cst(\"\")"
---
SOURCE_FILE
