crates/hird-parse/tests/snapshots/smoke__expr_arithmetic_then_comparison_ok.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = a + b == c\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      BIN_EXPR
        WHITESPACE " "
        IDENT "a"
        WHITESPACE " "
        PLUS "+"
        WHITESPACE " "
        IDENT "b"
      WHITESPACE " "
      EQ_EQ "=="
      WHITESPACE " "
      IDENT "c"
