crates/hird-parse/tests/snapshots/smoke__expr_binary_paren_precedence.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = (x + y) * z\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      PAREN_EXPR
        WHITESPACE " "
        L_PAREN "("
        BIN_EXPR
          IDENT "x"
          WHITESPACE " "
          PLUS "+"
          WHITESPACE " "
          IDENT "y"
        R_PAREN ")"
      WHITESPACE " "
      STAR "*"
      WHITESPACE " "
      IDENT "z"
