crates/hird-parse/tests/snapshots/smoke__expr_binary_precedence.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = x + y * z\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      WHITESPACE " "
      IDENT "x"
      WHITESPACE " "
      PLUS "+"
      BIN_EXPR
        WHITESPACE " "
        IDENT "y"
        WHITESPACE " "
        STAR "*"
        WHITESPACE " "
        IDENT "z"
